# PolicyGraph

./: .env.example  .gitignore  .pre-commit-config.yaml  BASELINE_COMPARISON.docx  BASELINE_COMPARISON.md  CHANGELOG.md  DATASET_EXPANSION.docx  DATASET_EXPANSION.md  DEVELOPMENT.md  EVALUATION_REPORT.docx  EVALUATION_REPORT.md  GET_SCRAPED_DATA.docx  GET_SCRAPED_DATA.md  IMPROVEMENTS_SUMMARY.md  LABELING_GUIDE.docx  LABELING_GUIDE.md  Makefile  README.md  SCRAPING_REPORT.docx  SCRAPING_REPORT.md  SETUP_GUIDE.docx  SETUP_GUIDE.md  TRAINING_REPORT.md  VERSION_COMPATIBILITY.docx  VERSION_COMPATIBILITY.md  WINDOWS_SETUP.md  analyze_account.py  analyze_data.py  check_labels.py  config.yaml  create_labels.py  diagnose_dataset.py  extract_from_csv.py  extract_policies.py  fix_dataset.py  fix_field_name.py  fix_labels.py  fix_labels_complete.py  fix_labels_structure.py  generate_synthetic_policies.py  (+15 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
checkpoints/long/: best_model.pt  training_metrics.csv
checkpoints/smoke/: best_model.pt  training_metrics.csv
checkpoints/weighted/: best_model.pt  training_metrics.csv
data/: .~lock.labeled_policies_merged.xlsx#  README.md  labeled_policies.xlsx  labeled_policies_clean.csv  labeled_policies_fixed.xlsx  labeled_policies_merged.xlsx  scraped_policies.csv  scraped_policies.xlsx
data/examples/: README.md
data/labeled_policies/: LABELS.json  labeling_state.json  model_scores.json  policies_labeled.csv
data/processed/: README.md  cloudformation_create_with_passrole_graph.json  escalation_attach_user_policy_graph.json  escalation_create_policy_version_graph.json  escalation_passrole_ec2_run_graph.json  escalation_passrole_lambda_create_graph.json  secure_ec2_read_only_graph.json  secure_mfa_required_graph.json  secure_s3_least_privilege_graph.json  sts_assume_role_chaining_graph.json  sts_assume_role_wildcard_graph.json
data/raw/: .~lock.policies_labeled.xlsx#  policies_labeled.csv  policies_labeled.xlsx
data/scraped_policies_sample/: raw_0012a8150a4a.tf  raw_00465bbc1ebc.tf  raw_00cb602f3504.tf  raw_018663a0e9ee.tf  raw_01bf7a791fa0.tf  raw_01de96c3fa65.tf  raw_02aff1d9a9eb.tf  raw_02b46dd06893.tf  raw_0544f8dbe5d3.tf  raw_a36d5fb80e6b.tf
data/train_policies/: CONVERSION_METADATA.json  LABELS.json  scraped_policy_0000.json  scraped_policy_0001.json  scraped_policy_0002.json  scraped_policy_0003.json  scraped_policy_0004.json  scraped_policy_0005.json  scraped_policy_0006.json  scraped_policy_0007.json  scraped_policy_0008.json  scraped_policy_0009.json  scraped_policy_0010.json  (+258 more)
docs/: .~lock.literature_survey.xls#  ARCHITECTURE.md  CONTRIBUTING.md  DATA_EXPLANATION.md  EXAMPLES.md  literature_survey.xls
policygraph/: __init__.py  __main__.py  analyzer.py  dataset.py  exceptions.py  graph_builder.py  models.py  parser.py  pipeline.py  utils.py
policygraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: evaluation_report.json
scripts/: auto_label.py  build_excel_v2.py  convert_tf_to_json.py  evaluate.py  excel_to_training_data.py  integrate_scraped.py  label_scraped_policies.py  label_workflow.sh  merge_into_training.py  merge_labeled_datasets.py  reconstruct_labels.py  run_all_baselines.sh  scrape_iam_terraform.py  scrape_iam_to_excel.py  train.py  validate_excel_data.py
tests/: test_analyzer.py  test_dataset.py  test_graph_builder.py  test_model.py
(+970 files in other folders)
